# ROS2-Marker-Snooping

./: README.md  package.xml  setup.cfg  setup.py
marker_snooping/: package.xml  setup.py  snoop_around.py  snoop_around_set_pose.py
marker_snooping/launch/: marker_snooping.launch.py  marker_snooping_stack.launch.py  marker_snooping_stack_fake_marker.launch.py  rviz.launch.py
marker_snooping/marker_snooping/: snoop_around.py
marker_snooping/params/: params.yaml  params_pasqualone.yaml  params_xarm.yaml  params_xarm_wac.yaml
marker_snooping_interfaces/: CMakeLists.txt  package.xml
marker_snooping_interfaces/action/: Snooping.action
marker_snooping_interfaces/srv/: SetTiltStatic.srv
snoop_marker/: package.xml
snoop_marker/marker_snooping/: snoop_around.py
target_snooping/: package.xml  setup.cfg  setup.py
target_snooping/launch/: marker_snooping.launch.py  marker_snooping_stack.launch.py  marker_snooping_stack_fake_marker.launch.py  rviz.launch.py  target_snooping.launch.py  target_snooping_stack_fake_marker.launch.py
target_snooping/params/: params.yaml  params_pasqualone.yaml  params_xarm_wac.yaml
target_snooping/rviz/: rviz_xarm.rviz
target_snooping/target_snooping/: target_snooping.py
target_snooping_interfaces/: CMakeLists.txt  package.xml
target_snooping_interfaces/action/: Snooping.action
target_snooping_interfaces/srv/: SetTiltStatic.srv
