<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>target_snooping</name>
  <version>0.0.0</version>
  <description>PTU Controller and Target Snooping</description>
  <maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>ptu_interfaces</depend>
  <depend>target_snooping_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
